<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    >
    <Button
        android:id="@+id/btInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonInput"
        />

    <Button
        android:id="@+id/btSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonSelect"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/btSelectOnOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonSelectOnOff"
        />
</LinearLayout>